unpackaged/main/default/objects/Certification_Benefit__c/Certification_Benefit__c.object-meta.xml
<CustomObject>
    <label>Certification Benefit</label>
    <nameField>
        <displayFormat>CB-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>