unpackaged/main/default/objects/Certification_Benefit__c/fields/Benefit_Detail__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Detail__c</fullName>
    <label>Benefit Detail</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>