unpackaged/main/default/objects/Certification_Benefit__c/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <label>Benefit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backend Rebate</fullName>
            </value>
            <value>
                <fullName>Deal_Registration_Percentage_Off_List_Price</fullName>
                <label>Deal Registration Percentage Off List Price</label>
            </value>
            <value>
                <fullName>Discount_Percentage_Off_List_Price</fullName>
                <label>Discount Percentage Off List Price</label>
            </value>
            <value>
                <fullName>Email Generation</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>MDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>