unpackaged/main/default/objects/Certification_Benefit__c/validationRules/Validate_Account_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Account_Match</fullName>
    <active>true</active>
    <errorConditionFormula>Account__r.Name  &lt;&gt;  Certification__r.Account__r.Name</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Account Name doesn&#39;t match.</errorMessage>
</ValidationRule>